# feast-benchmarks

./: .gitignore  Dockerfile  README.md  docker-compose.yml  feature_store.py  feature_store.yaml  generated_data.py  pyproject.toml  run_benchmark.sh  run_benchmark_endpoints.txt  run_benchmark_gen_requests.py
python/: run-benchmark.sh
python/docker/redis/: Dockerfile
python/feature_repos/redis/: feature_store.yaml
